--- a/index.html
+++ b/index.html
@@ -269,6 +269,42 @@ const observer = new IntersectionObserver(entries=>{
 
 cards.forEach(card=>observer.observe(card));
 </script>
+<!-- BOTÓN FLOTANTE CONTACTO -->
+<style>
+.contacto-float{
+  position:fixed;
+  right:22px;
+  bottom:26px;
+  z-index:9999;
+  background:#000;
+  color:#fff;
+  padding:14px 22px;
+  border-radius:999px;
+  font-size:14px;
+  font-weight:600;
+  letter-spacing:.5px;
+  text-decoration:none;
+  border:1px solid rgba(255,255,255,0.25);
+  box-shadow:0 20px 50px rgba(0,0,0,.6);
+  backdrop-filter:blur(10px);
+  animation:pulse 2.6s ease-in-out infinite;
+}
 
+.contacto-float:hover{
+  background:#fff;
+  color:#000;
+}
+
+@keyframes pulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.06)}
+  100%{transform:scale(1)}
+}
+</style>
+
+<a href="contacto.html" class="contacto-float">
+  Contacto
+</a>
 </body>
 </html>
+
