--- a/index.html
+++ b/index.html
@@ -277,45 +277,31 @@ form:scale(1)}
 <!-- BOTÓN FLOTANTE CONTACTO -->
 <style>
 .contacto-float{
-  position:fixed;
-  right:22px;
-  bottom:26px;
-  z-index:9999;
-  background:#000;
-  color:#fff;
-  padding:14px 22px;
-  border-radius:999px;
-  font-size:14px;
-  font-weight:600;
-  letter-spacing:.5px;
-  text-decoration:none;
-  border:1px solid rgba(255,255,255,0.25);
-  box-shadow:0 20px 50px rgba(0,0,0,.6);
-  backdrop-filter:blur(10px);
-  animation:pulse 2.6s ease-in-out infinite;
-}
+  position: fixed;
+  right: 20px;
+  bottom: 20px;           /* 👈 ABAJO DE VERDAD */
+  z-index: 50;            /* 👈 menor que el header */
+  
+  background: rgba(0,0,0,0.85);
+  color: #fff;
+  padding: 14px 26px;
+  border-radius: 999px;
 
-.contacto-float:hover{
-  background:#fff;
-  color:#000;
-}
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: .6px;
+  text-decoration: none;
 
-@keyframes pulse{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.06)}
-  100%{transform:scale(1)}
-}
-</style>
+  border: 1px solid rgba(255,255,255,.15);
+  box-shadow: 0 12px 40px rgba(0,0,0,.45);
 
-<a href="contacto.html" class="contacto-float">
-  Contacto
-</a>  
-<script>
-window.addEventListener('load', ()=>{
-  document.querySelector('.contacto-float').style.display = 'block';
-});
-</script>
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+
+  animation: pulse 2.8s ease-in-out infinite;
+}
 </body>
 </html>
+
 
 
