--- a/index.html
+++ b/index.html
@@ -300,8 +300,14 @@ form:scale(1)}
 
   animation: pulse 2.8s ease-in-out infinite;
 }
+<script>
+window.addEventListener('load', ()=>{
+  document.querySelector('.contacto-float').style.display = 'block';
+});
+</script>
 </body>
 </html>
+
 
 
 
