--- a/index.html
+++ b/index.html
@@ -301,12 +301,20 @@ form:scale(1)}
   animation: pulse 2.8s ease-in-out infinite;
 }
 <script>
-window.addEventListener('load', ()=>{
+window.addEventListener('load', () => {
   document.querySelector('.contacto-float').style.display = 'block';
 });
 </script>
+
+<a href="contacto.html" class="contacto-float">
+  Contacto
+</a>
+
 </body>
 </html>
+</body>
+</html>
+
 
 
 
