--- a/contacto.html
+++ b/contacto.html
@@ -2,176 +2,182 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contacto | Miranda Flow</title>
+<title>Contacto · Miranda Flow Boutique</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --bg:#060606;
-  --glass:rgba(255,255,255,0.06);
-  --border:rgba(255,255,255,0.08);
-  --text:#ffffff;
-  --muted:#9a9a9a;
-}
-
-*{box-sizing:border-box}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Inter,Helvetica,Arial,sans-serif;
-  background:radial-gradient(circle at top,#0f0f0f,#000);
-  color:var(--text);
-  min-height:100vh;
-}
-
-/* HEADER */
-header{
-  position:sticky;
-  top:0;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(18px);
-  border-bottom:1px solid var(--border);
-}
-.header-inner{
-  max-width:1100px;
-  margin:auto;
-  padding:16px 20px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-.brand{
-  font-weight:600;
-  letter-spacing:.6px;
-}
-.back{
-  text-decoration:none;
-  color:var(--muted);
-  font-size:14px;
-}
-.back:hover{color:#fff}
-
-/* MAIN */
-main{
-  max-width:820px;
-  margin:auto;
-  padding:70px 20px 90px;
-  text-align:center;
-}
-
-h1{
-  font-size:38px;
-  margin-bottom:12px;
-}
-.subtitle{
-  color:var(--muted);
-  font-size:15px;
-  max-width:520px;
-  margin:0 auto 60px;
-  line-height:1.6;
-}
-
-/* OPTIONS */
-.options{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:24px;
-}
-
-.option{
-  background:var(--glass);
-  border:1px solid var(--border);
-  border-radius:24px;
-  padding:36px 22px;
-  text-decoration:none;
+  font-family:'Inter',system-ui;
+  background:#000;
   color:#fff;
+  overflow-x:hidden;
+}
+
+/* ===== LOGO FONDO ===== */
+.bg-logo{
+  position:fixed;
+  inset:-20%;
+  background:url('logo.jpg') center/460px no-repeat;
+  opacity:.25;
+  filter:blur(2px);
+  animation:pulse 8s ease-in-out infinite;
+  z-index:-2;
+}
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.06)}
+}
+
+/* ===== HEADER ===== */
+header{
+  position:fixed;
+  top:14px;
+  left:50%;
+  transform:translateX(-50%);
+  width:calc(100% - 28px);
+  max-width:1000px;
+  z-index:50;
   display:flex;
-  flex-direction:column;
   align-items:center;
   gap:14px;
-  transition:.35s ease;
-  box-shadow:0 30px 80px rgba(0,0,0,.6);
+  padding:14px 22px;
+  border-radius:18px;
+  background:rgba(0,0,0,.45);
+  backdrop-filter:blur(20px);
+  box-shadow:0 10px 40px rgba(0,0,0,.6);
 }
-
-.option:hover{
-  transform:translateY(-6px);
-  background:rgba(255,255,255,0.09);
+header a{
+  color:#fff;
+  text-decoration:none;
+  font-size:13px;
+  letter-spacing:.18em;
+  opacity:.7;
 }
+header a:hover{opacity:1}
 
-.icon{
-  width:60px;
-  height:60px;
-  border-radius:50%;
+/* ===== ESPACIO HEADER ===== */
+.spacer{height:110px}
+
+/* ===== CONTENIDO ===== */
+.contacto{
+  min-height:calc(100vh - 110px);
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:26px;
+  padding:40px 20px;
+}
+.contacto-card{
+  background:rgba(255,255,255,.06);
+  backdrop-filter:blur(24px);
+  border-radius:28px;
+  padding:46px 32px;
+  max-width:420px;
+  width:100%;
+  text-align:center;
+  box-shadow:0 0 70px rgba(0,0,0,.7);
+}
+.contacto-card h1{
+  font-size:36px;
+  font-weight:800;
+  margin-bottom:14px;
+}
+.contacto-card p{
+  opacity:.7;
+  line-height:1.6;
+  margin-bottom:34px;
+}
+
+/* ===== BOTONES ===== */
+.contacto-links{
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+}
+.contacto-btn{
+  padding:18px;
+  border-radius:16px;
+  text-decoration:none;
+  font-weight:600;
+  letter-spacing:.14em;
+  text-transform:uppercase;
+  font-size:12px;
+  display:block;
+  transition:.45s cubic-bezier(.2,.8,.2,1);
+  border:1px solid rgba(255,255,255,.25);
+}
+
+/* Instagram */
+.btn-ig{
   background:#fff;
   color:#000;
 }
-
-.option h3{
-  margin:12px 0 0;
-  font-size:18px;
-  font-weight:500;
-}
-.option p{
-  margin:0;
-  font-size:14px;
-  color:var(--muted);
+.btn-ig:hover{
+  transform:translateY(-4px);
+  background:#000;
+  color:#fff;
+  border:1px solid rgba(255,255,255,.45);
 }
 
-/* FOOTER */
-footer{
-  margin-top:80px;
-  font-size:13px;
-  color:var(--muted);
+/* WhatsApp (placeholder futuro) */
+.btn-disabled{
+  opacity:.35;
+  cursor:default;
+}
+
+/* ===== FOOTER ===== */
+.footer{
+  padding:30px 20px 40px;
+  text-align:center;
+  font-size:12px;
+  opacity:.4;
 }
 </style>
 </head>
 
 <body>
 
+<div class="bg-logo"></div>
+
 <header>
-  <div class="header-inner">
-    <div class="brand">Miranda Flow</div>
-    <a href="index.html" class="back">← Volver</a>
-  </div>
+  <a href="index.html">← Inicio</a>
 </header>
 
-<main>
-  <h1>Contacto</h1>
-  <div class="subtitle">
-    Acceso directo. Comunicación privada.  
-    Elige el canal que prefieras.
+<div class="spacer"></div>
+
+<section class="contacto">
+  <div class="contacto-card">
+    <h1>Contacto</h1>
+    <p>
+      Conecta con Miranda Flow.<br>
+      Presencia, visión y evolución.
+    </p>
+
+    <div class="contacto-links">
+      <a 
+        href="https://www.instagram.com/miranda_flow_boutique_2070?igsh=MWN2MXZkZnh2MXFyeg==" 
+        target="_blank" 
+        class="contacto-btn btn-ig">
+        Instagram
+      </a>
+
+      <div class="contacto-btn btn-disabled">
+        WhatsApp (próximamente)
+      </div>
+
+      <div class="contacto-btn btn-disabled">
+        TikTok (próximamente)
+      </div>
+    </div>
   </div>
+</section>
 
-  <div class="options">
-
-    <a class="option" href="https://wa.me/15555555555" target="_blank">
-      <div class="icon">💬</div>
-      <h3>WhatsApp</h3>
-      <p>Atención directa</p>
-    </a>
-
-    <a class="option" href="https://instagram.com/tuperfil" target="_blank">
-      <div class="icon">📸</div>
-      <h3>Instagram</h3>
-      <p>Contenido y mensajes</p>
-    </a>
-
-    <a class="option" href="https://tiktok.com/@tuperfil" target="_blank">
-      <div class="icon">🎵</div>
-      <h3>TikTok</h3>
-      <p>Clips y lanzamientos</p>
-    </a>
-
-  </div>
-
-  <footer>
-    © Miranda Flow — Private Access
-  </footer>
-</main>
+<div class="footer">
+  © 2025 Miranda Flow Boutique
+</div>
 
 </body>
 </html>
